@@ -1,6 +1,8 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
 
+lossless = ['flac', 'truehd']
+
 
 def build_audio(audio_tracks, audio_file_index=0):
     command_list = []
@@ -16,8 +18,11 @@ def build_audio(audio_tracks, audio_file_index=0):
         if track.conversion.codec == "none":
             command_list.append(f"-c:{track.outdex} copy")
         elif "conversion" in track:
+            bitrate = ""
+            if track.conversion.codec not in lossless:
+                bitrate = f"-b:{track.outdex} {track.conversion.bitrate} "
             command_list.append(
-                f"-c:{track.outdex} {track.conversion.codec} -b:{track.outdex} {track.conversion.bitrate} {downmix}"
+                f"-c:{track.outdex} {track.conversion.codec} {bitrate} {downmix}"
             )
 
     return " ".join(command_list)
