@@ -6,6 +6,7 @@ from box import Box
 from qtpy import QtWidgets, QtCore, QtGui
 from fastflix.widgets.panels.abstract_list import FlixList
 
+lossless = ['flac', 'truehd']
 
 class Audio(QtWidgets.QTabWidget):
     def __init__(
@@ -170,8 +171,13 @@ class Audio(QtWidgets.QTabWidget):
     def update_conversion(self):
         if self.widgets.convert_to.currentIndex() == 0:
             self.widgets.downmix.setDisabled(True)
+            self.widgets.convert_bitrate.setDisabled(True)
         else:
             self.widgets.downmix.setDisabled(False)
+            if self.widgets.convert_to.currentText() in lossless:
+                self.widgets.convert_bitrate.setDisabled(True)
+            else:
+                self.widgets.convert_bitrate.setDisabled(False)
         self.page_update()
 
     def page_update(self):
@@ -193,6 +199,7 @@ class Audio(QtWidgets.QTabWidget):
                 index += 1
             self.widgets.convert_to.setCurrentIndex(index)
         self.widgets.convert_to.setCurrentIndex(0)  # Will either go to 'copy' or first listed
+        self.widgets.convert_bitrate.setDisabled(True)
         self.loading = False
 
     @property
